fixing spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -66,7 +66,7 @@ body{
 
 .p-break{
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .navbar-default {
